--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "^3.12.2",
     "eslint-config-airbnb-base": "^11.0.0",
     "eslint-plugin-import": "^2.2.0",
+    "glob": "^7.1.1",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.3.2",
     "gulp-htmlmin": "^3.0.0",
