Update package.json and add standart plugin for eslint

--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "devDependencies": {
     "browser-sync": "^2.18.5",
     "eslint": "^3.12.2",
-    "eslint-config-airbnb-base": "^11.0.0",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-config-standard": "^7.0.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^2.1.1",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.3.2",
