--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
-    "extends": "airbnb-base",
-    "installedESLint": true,
+    "extends": "standard",
     "plugins": [
-        "import"
+        "standard",
+        "promise"
     ]
 }
