--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "gulp",
-    "build": "gulp -p"
+    "dev": "gulp dev",
+    "build": "gulp build",
+    "clean": "rm -rf ./dist/"
   },
+  "repository": "",
   "author": "EmanuelG",
   "license": "MIT",
   "devDependencies": {
@@ -18,14 +20,13 @@
     "eslint-plugin-standard": "^2.1.1",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.3.2",
     "gulp-htmlmin": "^3.0.0",
-    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.1.1",
     "gulp-pug": "^3.2.0",
-    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.0.0",
     "node-sass": "^4.1.1",
-    "yargs": "^6.6.0"
+    "run-sequence": "^2.1.0"
   }
 }
